Added documentation in Form1.cs. Rerun Doxygen

--- a/doc/latex/class_yathzee_1_1_lower_score_section.tex
+++ b/doc/latex/class_yathzee_1_1_lower_score_section.tex
@@ -9,10 +9,10 @@ Inheritance diagram for Yathzee.\+Lower\+Score\+Section\+:\begin{figure}[H]
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-Dictionary$<$ Score\+Type\+Lower, int $>$ {\bfseries get\+Scores} ()\hypertarget{class_yathzee_1_1_lower_score_section_a427d65a33219f4e2d4965cc56f18e1a6}{}\label{class_yathzee_1_1_lower_score_section_a427d65a33219f4e2d4965cc56f18e1a6}
+Dictionary$<$ \hyperlink{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{Score\+Type\+Lower}, int $>$ {\bfseries get\+Scores} ()\hypertarget{class_yathzee_1_1_lower_score_section_a427d65a33219f4e2d4965cc56f18e1a6}{}\label{class_yathzee_1_1_lower_score_section_a427d65a33219f4e2d4965cc56f18e1a6}
 
 \item 
-void {\bfseries check\+Score} (\hyperlink{class_yathzee_1_1_die}{Die}\mbox{[}$\,$\mbox{]} dice, Score\+Type\+Lower score\+Type)\hypertarget{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}{}\label{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}
+void {\bfseries check\+Score} (\hyperlink{class_yathzee_1_1_die}{Die}\mbox{[}$\,$\mbox{]} dice, \hyperlink{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{Score\+Type\+Lower} score\+Type)\hypertarget{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}{}\label{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}
 
 \end{DoxyCompactItemize}
 \subsection*{Additional Inherited Members}
