--- a/doc/latex/class_yathzee_1_1_upper_score_section.tex
+++ b/doc/latex/class_yathzee_1_1_upper_score_section.tex
@@ -9,7 +9,7 @@ Inheritance diagram for Yathzee.\+Upper\+Score\+Section\+:\begin{figure}[H]
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-Dictionary$<$ Score\+Type\+Upper, int $>$ {\bfseries get\+Scores} ()\hypertarget{class_yathzee_1_1_upper_score_section_aa10b4b6d4c7038e80c9d221bfb482b72}{}\label{class_yathzee_1_1_upper_score_section_aa10b4b6d4c7038e80c9d221bfb482b72}
+Dictionary$<$ \hyperlink{namespace_yathzee_af9eae2784d7776b80bb77da141a63b7f}{Score\+Type\+Upper}, int $>$ {\bfseries get\+Scores} ()\hypertarget{class_yathzee_1_1_upper_score_section_aa10b4b6d4c7038e80c9d221bfb482b72}{}\label{class_yathzee_1_1_upper_score_section_aa10b4b6d4c7038e80c9d221bfb482b72}
 
 \item 
 void {\bfseries check\+Score} (\hyperlink{class_yathzee_1_1_die}{Die}\mbox{[}$\,$\mbox{]} dice, int checked\+Value)\hypertarget{class_yathzee_1_1_upper_score_section_ae2db6ea707243900dc1b87cdc4ff9e2f}{}\label{class_yathzee_1_1_upper_score_section_ae2db6ea707243900dc1b87cdc4ff9e2f}
