--- a/doc/latex/namespace_yathzee.tex
+++ b/doc/latex/namespace_yathzee.tex
@@ -22,7 +22,7 @@ class \hyperlink{class_yathzee_1_1_upper_score_section}{Upper\+Score\+Section}
 \subsection*{Enumerations}
 \begin{DoxyCompactItemize}
 \item 
-enum {\bfseries Score\+Type\+Upper} \+: byte \{ \\*
+enum \hyperlink{namespace_yathzee_af9eae2784d7776b80bb77da141a63b7f}{Score\+Type\+Upper} \+: byte \{ \\*
 {\bfseries One}, 
 {\bfseries Two}, 
 {\bfseries Three}, 
@@ -32,10 +32,9 @@ enum {\bfseries Score\+Type\+Upper} \+: byte \{ \\*
 {\bfseries Six}, 
 {\bfseries Bonus}, 
 {\bfseries Total}
- \}\hypertarget{namespace_yathzee_af9eae2784d7776b80bb77da141a63b7f}{}\label{namespace_yathzee_af9eae2784d7776b80bb77da141a63b7f}
-
+ \}\begin{DoxyCompactList}\small\item\em Score type for the upper part of the score section. \end{DoxyCompactList}
 \item 
-enum {\bfseries Score\+Type\+Lower} \+: byte \{ \\*
+enum \hyperlink{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{Score\+Type\+Lower} \+: byte \{ \\*
 {\bfseries Three\+Of\+Kind}, 
 {\bfseries Four\+Of\+Kind}, 
 {\bfseries Full\+House}, 
@@ -45,6 +44,22 @@ enum {\bfseries Score\+Type\+Lower} \+: byte \{ \\*
 {\bfseries Yathzee}, 
 {\bfseries Chance}, 
 {\bfseries Total}
- \}\hypertarget{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{}\label{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}
-
+ \}\begin{DoxyCompactList}\small\item\em Score type for the lower part of the score section. \end{DoxyCompactList}
 \end{DoxyCompactItemize}
+
+
+\subsection{Enumeration Type Documentation}
+\index{Yathzee@{Yathzee}!Score\+Type\+Lower@{Score\+Type\+Lower}}
+\index{Score\+Type\+Lower@{Score\+Type\+Lower}!Yathzee@{Yathzee}}
+\subsubsection[{\texorpdfstring{Score\+Type\+Lower}{ScoreTypeLower}}]{\setlength{\rightskip}{0pt plus 5cm}enum {\bf Yathzee.\+Score\+Type\+Lower} \+: byte\hspace{0.3cm}{\ttfamily [strong]}}\hypertarget{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{}\label{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}
+
+
+Score type for the lower part of the score section. 
+
+\index{Yathzee@{Yathzee}!Score\+Type\+Upper@{Score\+Type\+Upper}}
+\index{Score\+Type\+Upper@{Score\+Type\+Upper}!Yathzee@{Yathzee}}
+\subsubsection[{\texorpdfstring{Score\+Type\+Upper}{ScoreTypeUpper}}]{\setlength{\rightskip}{0pt plus 5cm}enum {\bf Yathzee.\+Score\+Type\+Upper} \+: byte\hspace{0.3cm}{\ttfamily [strong]}}\hypertarget{namespace_yathzee_af9eae2784d7776b80bb77da141a63b7f}{}\label{namespace_yathzee_af9eae2784d7776b80bb77da141a63b7f}
+
+
+Score type for the upper part of the score section. 
+
