--- a/doc/latex/class_yathzee_1_1_form1.tex
+++ b/doc/latex/class_yathzee_1_1_form1.tex
@@ -6,11 +6,30 @@ Inheritance diagram for Yathzee.\+Form1\+:\begin{figure}[H]
 \includegraphics[height=2.000000cm]{class_yathzee_1_1_form1}
 \end{center}
 \end{figure}
+\subsection*{Public Member Functions}
+\begin{DoxyCompactItemize}
+\item 
+\hyperlink{class_yathzee_1_1_form1_a72fd0c431a8f1bbfae37f57917046763}{Form1} ()
+\begin{DoxyCompactList}\small\item\em Sets up the G\+UI. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Protected Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 override void \hyperlink{class_yathzee_1_1_form1_a481d2704c1eb9c036cd9389d3dd866cb}{Dispose} (bool disposing)
 \begin{DoxyCompactList}\small\item\em Clean up any resources being used. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\subsection{Constructor \& Destructor Documentation}
+\index{Yathzee\+::\+Form1@{Yathzee\+::\+Form1}!Form1@{Form1}}
+\index{Form1@{Form1}!Yathzee\+::\+Form1@{Yathzee\+::\+Form1}}
+\subsubsection[{\texorpdfstring{Form1()}{Form1()}}]{\setlength{\rightskip}{0pt plus 5cm}Yathzee.\+Form1.\+Form1 (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}\hypertarget{class_yathzee_1_1_form1_a72fd0c431a8f1bbfae37f57917046763}{}\label{class_yathzee_1_1_form1_a72fd0c431a8f1bbfae37f57917046763}
+
+
+Sets up the G\+UI. 
+
 
 
 \subsection{Member Function Documentation}
