Updated documentaion for lower score section

--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -4,7 +4,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_die}{Yathzee.\+Die} \\*\hyperlink{class_yathzee_1_1_die}{Die} objects are objects that have a die value, and a \hyperlink{class_yathzee_1_1_die_image}{Die\+Image} }{\pageref{class_yathzee_1_1_die}}{}
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_die_image}{Yathzee.\+Die\+Image} }{\pageref{class_yathzee_1_1_die_image}}{}
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_form1}{Yathzee.\+Form1} }{\pageref{class_yathzee_1_1_form1}}{}
-\item\contentsline{section}{\hyperlink{class_yathzee_1_1_lower_score_section}{Yathzee.\+Lower\+Score\+Section} }{\pageref{class_yathzee_1_1_lower_score_section}}{}
+\item\contentsline{section}{\hyperlink{class_yathzee_1_1_lower_score_section}{Yathzee.\+Lower\+Score\+Section} \\*Class responsible to hold the data for the lower score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores. }{\pageref{class_yathzee_1_1_lower_score_section}}{}
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_score_section}{Yathzee.\+Score\+Section} }{\pageref{class_yathzee_1_1_score_section}}{}
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_upper_score_section}{Yathzee.\+Upper\+Score\+Section} }{\pageref{class_yathzee_1_1_upper_score_section}}{}
 \end{DoxyCompactList}
