--- a/doc/latex/class_yathzee_1_1_lower_score_section.tex
+++ b/doc/latex/class_yathzee_1_1_lower_score_section.tex
@@ -1,5 +1,10 @@
 \hypertarget{class_yathzee_1_1_lower_score_section}{}\section{Yathzee.\+Lower\+Score\+Section Class Reference}
 \label{class_yathzee_1_1_lower_score_section}\index{Yathzee.\+Lower\+Score\+Section@{Yathzee.\+Lower\+Score\+Section}}
+
+
+Class responsible to hold the data for the lower score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores.  
+
+
 Inheritance diagram for Yathzee.\+Lower\+Score\+Section\+:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,10 +17,36 @@ Inheritance diagram for Yathzee.\+Lower\+Score\+Section\+:\begin{figure}[H]
 Dictionary$<$ \hyperlink{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{Score\+Type\+Lower}, int $>$ {\bfseries get\+Scores} ()\hypertarget{class_yathzee_1_1_lower_score_section_a427d65a33219f4e2d4965cc56f18e1a6}{}\label{class_yathzee_1_1_lower_score_section_a427d65a33219f4e2d4965cc56f18e1a6}
 
 \item 
-void {\bfseries check\+Score} (\hyperlink{class_yathzee_1_1_die}{Die}\mbox{[}$\,$\mbox{]} dice, \hyperlink{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{Score\+Type\+Lower} score\+Type)\hypertarget{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}{}\label{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}
-
-\end{DoxyCompactItemize}
+void \hyperlink{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}{check\+Score} (\hyperlink{class_yathzee_1_1_die}{Die}\mbox{[}$\,$\mbox{]} dice, \hyperlink{namespace_yathzee_ae036ce06cdf75e284ea1cd78a457ef70}{Score\+Type\+Lower} score\+Type)
+\begin{DoxyCompactList}\small\item\em Main entry point for the class. Checkes what the score is for a dice array with a score type, and stores it in the score\+Values Dictonary. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Additional Inherited Members}
+
+
+\subsection{Detailed Description}
+Class responsible to hold the data for the lower score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores. 
+
+
+
+\subsection{Member Function Documentation}
+\index{Yathzee\+::\+Lower\+Score\+Section@{Yathzee\+::\+Lower\+Score\+Section}!check\+Score@{check\+Score}}
+\index{check\+Score@{check\+Score}!Yathzee\+::\+Lower\+Score\+Section@{Yathzee\+::\+Lower\+Score\+Section}}
+\subsubsection[{\texorpdfstring{check\+Score(\+Die[] dice, Score\+Type\+Lower score\+Type)}{checkScore(Die[] dice, ScoreTypeLower scoreType)}}]{\setlength{\rightskip}{0pt plus 5cm}void Yathzee.\+Lower\+Score\+Section.\+check\+Score (
+\begin{DoxyParamCaption}
+\item[{{\bf Die}\mbox{[}$\,$\mbox{]}}]{dice, }
+\item[{{\bf Score\+Type\+Lower}}]{score\+Type}
+\end{DoxyParamCaption}
+)}\hypertarget{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}{}\label{class_yathzee_1_1_lower_score_section_acd14498c43eb2c788e450269095a9b61}
+
+
+Main entry point for the class. Checkes what the score is for a dice array with a score type, and stores it in the score\+Values Dictonary. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em dice} & \\
+\hline
+{\em score\+Type} & \\
+\hline
+\end{DoxyParams}
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
