--- a/doc/latex/namespace_yathzee.tex
+++ b/doc/latex/namespace_yathzee.tex
@@ -12,7 +12,7 @@ class \hyperlink{class_yathzee_1_1_die_image}{Die\+Image}
 class \hyperlink{class_yathzee_1_1_form1}{Form1}
 \item 
 class \hyperlink{class_yathzee_1_1_lower_score_section}{Lower\+Score\+Section}
-\item 
+\begin{DoxyCompactList}\small\item\em Class responsible to hold the data for the lower score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores. \end{DoxyCompactList}\item 
 class {\bfseries Program}
 \item 
 class \hyperlink{class_yathzee_1_1_score_section}{Score\+Section}
