Updated documentation for Abstract Score Section

--- a/doc/latex/namespace_yathzee.tex
+++ b/doc/latex/namespace_yathzee.tex
@@ -16,7 +16,7 @@ class \hyperlink{class_yathzee_1_1_lower_score_section}{Lower\+Score\+Section}
 class {\bfseries Program}
 \item 
 class \hyperlink{class_yathzee_1_1_score_section}{Score\+Section}
-\item 
+\begin{DoxyCompactList}\small\item\em Abstract class for score section. \end{DoxyCompactList}\item 
 class \hyperlink{class_yathzee_1_1_upper_score_section}{Upper\+Score\+Section}
 \end{DoxyCompactItemize}
 \subsection*{Enumerations}
