--- a/doc/latex/class_yathzee_1_1_score_section.tex
+++ b/doc/latex/class_yathzee_1_1_score_section.tex
@@ -1,5 +1,10 @@
 \hypertarget{class_yathzee_1_1_score_section}{}\section{Yathzee.\+Score\+Section Class Reference}
 \label{class_yathzee_1_1_score_section}\index{Yathzee.\+Score\+Section@{Yathzee.\+Score\+Section}}
+
+
+Abstract class for score section.  
+
+
 Inheritance diagram for Yathzee.\+Score\+Section\+:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,6 +17,11 @@ Inheritance diagram for Yathzee.\+Score\+Section\+:\begin{figure}[H]
 int {\bfseries Total}\hspace{0.3cm}{\ttfamily  \mbox{[}get, set\mbox{]}}\hypertarget{class_yathzee_1_1_score_section_a58581bbdd2cda719e5f1dcd7659c412f}{}\label{class_yathzee_1_1_score_section_a58581bbdd2cda719e5f1dcd7659c412f}
 
 \end{DoxyCompactItemize}
+
+
+\subsection{Detailed Description}
+Abstract class for score section. 
+
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
