Updated documentation for Upper score section

--- a/doc/latex/class_yathzee_1_1_lower_score_section.tex
+++ b/doc/latex/class_yathzee_1_1_lower_score_section.tex
@@ -42,9 +42,9 @@ Main entry point for the class. Checkes what the score is for a dice array with 
 
 
 \begin{DoxyParams}{Parameters}
-{\em dice} & \\
+{\em dice} & The array of \hyperlink{class_yathzee_1_1_die}{Die} objects to check\\
 \hline
-{\em score\+Type} & \\
+{\em score\+Type} & The score type to check against.\\
 \hline
 \end{DoxyParams}
 
