--- a/doc/latex/namespace_yathzee.tex
+++ b/doc/latex/namespace_yathzee.tex
@@ -18,7 +18,7 @@ class {\bfseries Program}
 class \hyperlink{class_yathzee_1_1_score_section}{Score\+Section}
 \begin{DoxyCompactList}\small\item\em Abstract class for score section. \end{DoxyCompactList}\item 
 class \hyperlink{class_yathzee_1_1_upper_score_section}{Upper\+Score\+Section}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Class responsible to hold the data for the upper score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Enumerations}
 \begin{DoxyCompactItemize}
 \item 
