--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -6,5 +6,5 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_form1}{Yathzee.\+Form1} }{\pageref{class_yathzee_1_1_form1}}{}
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_lower_score_section}{Yathzee.\+Lower\+Score\+Section} \\*Class responsible to hold the data for the lower score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores. }{\pageref{class_yathzee_1_1_lower_score_section}}{}
 \item\contentsline{section}{\hyperlink{class_yathzee_1_1_score_section}{Yathzee.\+Score\+Section} \\*Abstract class for score section. }{\pageref{class_yathzee_1_1_score_section}}{}
-\item\contentsline{section}{\hyperlink{class_yathzee_1_1_upper_score_section}{Yathzee.\+Upper\+Score\+Section} }{\pageref{class_yathzee_1_1_upper_score_section}}{}
+\item\contentsline{section}{\hyperlink{class_yathzee_1_1_upper_score_section}{Yathzee.\+Upper\+Score\+Section} \\*Class responsible to hold the data for the upper score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores. }{\pageref{class_yathzee_1_1_upper_score_section}}{}
 \end{DoxyCompactList}
