Updated some documentation in form and DieImage

--- a/doc/latex/class_yathzee_1_1_die_image.tex
+++ b/doc/latex/class_yathzee_1_1_die_image.tex
@@ -1,5 +1,10 @@
 \hypertarget{class_yathzee_1_1_die_image}{}\section{Yathzee.\+Die\+Image Class Reference}
 \label{class_yathzee_1_1_die_image}\index{Yathzee.\+Die\+Image@{Yathzee.\+Die\+Image}}
+
+
+Gets the proper image for a die value.  
+
+
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -24,6 +29,11 @@ System.\+Drawing.\+Image {\bfseries get\+Die6} ()\hypertarget{class_yathzee_1_1_
 System.\+Drawing.\+Image {\bfseries get\+Die\+Blank} ()\hypertarget{class_yathzee_1_1_die_image_a86d428cf3935a1785df461b2fa710d8f}{}\label{class_yathzee_1_1_die_image_a86d428cf3935a1785df461b2fa710d8f}
 
 \end{DoxyCompactItemize}
+
+
+\subsection{Detailed Description}
+Gets the proper image for a die value. 
+
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
