--- a/doc/latex/class_yathzee_1_1_form1.tex
+++ b/doc/latex/class_yathzee_1_1_form1.tex
@@ -1,5 +1,10 @@
 \hypertarget{class_yathzee_1_1_form1}{}\section{Yathzee.\+Form1 Class Reference}
 \label{class_yathzee_1_1_form1}\index{Yathzee.\+Form1@{Yathzee.\+Form1}}
+
+
+The Graphical User Interface for \hyperlink{namespace_yathzee}{Yathzee}.  
+
+
 Inheritance diagram for Yathzee.\+Form1\+:\begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,6 +21,11 @@ Inheritance diagram for Yathzee.\+Form1\+:\begin{figure}[H]
 \item 
 override void \hyperlink{class_yathzee_1_1_form1_a481d2704c1eb9c036cd9389d3dd866cb}{Dispose} (bool disposing)
 \begin{DoxyCompactList}\small\item\em Clean up any resources being used. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\subsection{Detailed Description}
+The Graphical User Interface for \hyperlink{namespace_yathzee}{Yathzee}. 
+
 
 
 \subsection{Constructor \& Destructor Documentation}
