--- a/doc/latex/namespace_yathzee.tex
+++ b/doc/latex/namespace_yathzee.tex
@@ -8,9 +8,9 @@ class \hyperlink{class_yathzee_1_1_dice_generator}{Dice\+Generator}
 class \hyperlink{class_yathzee_1_1_die}{Die}
 \begin{DoxyCompactList}\small\item\em \hyperlink{class_yathzee_1_1_die}{Die} objects are objects that have a die value, and a \hyperlink{class_yathzee_1_1_die_image}{Die\+Image} \end{DoxyCompactList}\item 
 class \hyperlink{class_yathzee_1_1_die_image}{Die\+Image}
-\item 
+\begin{DoxyCompactList}\small\item\em Gets the proper image for a die value. \end{DoxyCompactList}\item 
 class \hyperlink{class_yathzee_1_1_form1}{Form1}
-\item 
+\begin{DoxyCompactList}\small\item\em The Graphical User Interface for \hyperlink{namespace_yathzee}{Yathzee}. \end{DoxyCompactList}\item 
 class \hyperlink{class_yathzee_1_1_lower_score_section}{Lower\+Score\+Section}
 \begin{DoxyCompactList}\small\item\em Class responsible to hold the data for the lower score section and test the \hyperlink{class_yathzee_1_1_die}{Die} values for specific scores. \end{DoxyCompactList}\item 
 class {\bfseries Program}
